add heroku link to documentation in index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h1>Welcome to Parkside Paradise Virtual Walks</h1>
-    <p>To use this api, please add your requested US National Park's short name to this url: </p>
-    <p>Examples of a park's short name would be Yellowstone (for Yellowstone National Park), or Olympic (for Olympic National Park).</p>    
+    <p>To use this api, please add your requested US National Park's short name to this url: https://parkside-virtual-walk-api.herokuapp.com/api/[park's short name]</p>
+    <p>Examples of a park's short name would be Yellowstone (for Yellowstone National Park), or Olympic (for Olympic National Park).</p>
+    <p>Enjoy your walk!</p> 
 </body>
 </html>
